src/sass/layout/_header.scss
.header {
    /* 95% of viewport height */
    height: 95vh;
    background-image: linear-gradient(
            to right bottom,
            rgba($color-primary-light, 0.8),
            rgba($color-primary-dark, 0.8)
        ),
        url("../img/hero-bg.jpeg");
    /* cover: fit the view port */
    background-size: cover;
    /* always stays at the top of the container */
    background-position: top;
    /* clockwise */
    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
    -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
    position: relative;

    @include respond(phone) {
        clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
        --webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
    }

    &__logo-box {
        // This is selecting header__logo-box. SCSS nesting
        position: absolute;
        /* since header (parent) has position relative, top 40px will relative to the header element */
        top: 4rem;
        left: 4rem;
        // width: 50%;
        // height: 50%;
    }

    &__logo {
        // width: 10rem;
        height: 5rem;
    }

    &__text-box {
        position: absolute;
        top: 40%;
        left: 50%;
        transform: translate(-50%, -50%);
        /* Put the btn white element to the center */
        text-align: center;
    }
}

